Added itemListCategory Added DescriptionActivity Started ShoppingCartActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Cake shop</string>
+    <string name="titleCoverScreenTextView">Cake Shop</string>
 </resources>
